my-final/k8s/backend-all.yml
apiVersion: v1 
kind: Service 
metadata: 
  name: backend-svc
spec: 
  type: ClusterIP
  selector: 
    app: backend 
  ports: 
  - protocol: TCP 
    port: 80
    targetPort: 3000 
---
apiVersion: apps/v1
kind: Deployment
metadata: 
  name: backend-app
spec: 
  replicas: 3 
  selector: 
    matchLabels: 
      app: backend
  template: 
    metadata: 
      labels: 
        app: backend
    spec:
      containers: 
      - name: backend-container
        image: us-east1-docker.pkg.dev/booming-coast-442417-k7/my-repository/my-backend:latest
        ports: 
        - containerPort: 3000
