my-final/k8s/frontend-all.yml
apiVersion: v1 
kind: Service 
metadata: 
  name: frontend-svc 
spec: 
  type: ClusterIP
  selector: 
    app: frontend 
  ports: 
  - protocol: TCP 
    port: 80
    targetPort: 80
---
apiVersion: apps/v1 
kind: Deployment 
metadata: 
  name: frontend-app 
spec: 
  replicas: 3
  selector: 
    matchLabels: 
      app: frontend 
  template: 
    metadata: 
      labels: 
        app: frontend 
    spec: 
      containers: 
      - name: frontend-container 
        image: us-east1-docker.pkg.dev/booming-coast-442417-k7/my-repository/my-frontend:latest
        ports: 
        - containerPort: 80
