my-final/k8s/postgres-all.yml
apiVersion: v1
kind: Service
metadata:
  name: postgres-svc
spec:
  type: LoadBalancer
  selector:
    app: postgres
  ports:
    - port: 5432
      targetPort: 5432
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: postgres
  template:
    metadata:
      labels:
        app: postgres
    spec:
      containers:
        - name: postgres-container
          image: us-east1-docker.pkg.dev/booming-coast-442417-k7/my-repository/my-postgres:latest
          ports:
            - containerPort: 5432
          volumeMounts: 
            - name: postgres-vol
              mountPath: /data
              subPath: postgres
      volumes:
        - name: postgres-vol
          persistentVolumeClaim:
            claimName: postgres-pvc
# ---
# apiVersion: v1 
# kind: Secret
# metadata:
#   name: postgres-secret
# data:
#   user: cG9zdGdyZXM=
#   database: cG9zdGdyZXM=
#   password: YWJhbmEuMTIz
