my-final/k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  annotations:
    external-dns.alpha.kubernetes.io/hostname: "abanabanana.site"
    external-dns.alpha.kubernetes.io/zone: public
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    cert-manager.io/cluster-issuer: letsencrypt-production
spec:
  tls:
  - hosts:
    - abanabanana.site
    secretName: certificate-secret
  ingressClassName: nginx
  rules:
  - host: "abanabanana.site"
    http:  
      paths:
      - path: /?(.*)
        pathType: Prefix
        backend:
          service:
            name: frontend-svc
            port:
              number: 80
      - path: /api/?(.*)
        pathType: Prefix
        backend:
          service:
            name: backend-svc
            port:
              number: 80
